Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5104

Cannot pull and push repo to online repository with http authorization

XMLWordPrintable

    • bc29c67183db6d2ad87861aca4966c4ae2e1b83d

      Qt Qreator Cannot pull and push repo to online repository with http authorization (e.g: private repository in bitbucket.org)

      This is the error message which appeared in log message:

      Executing in D:\rod: H:\TortoiseHg\hg.exe push
      abort: http authorization required
      The command 'H:\TortoiseHg\hg.exe' terminated abnormally.

      I think the right approach to solving this problem is to provide dialog for inputing username and password, like tortoisehg did.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            bungcip Gigih aji ibrahim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes