Mercurial: Handle HTTP authentication

Make it possible to pull and push onto online repositories with http
authorization.

Task-number: QTCREATORBUG-5104

Change-Id: Id5f5a865d301e644002e4fa8b7056d08fd9b7467
Reviewed-by: hjk <hjk121@nokiamail.com>